force-app/main/default/objects/MyOrder__c/fields/delivery_AddressName__c.field-meta.xml
<CustomField>
    <fullName>delivery_AddressName__c</fullName>
    <label>delivery AddressName</label>
    <length>16</length>
    <type>Text</type>
</CustomField>