force-app/main/default/objects/MyOrder__c/fields/delivery_City__c.field-meta.xml
<CustomField>
    <fullName>delivery_City__c</fullName>
    <label>delivery_City</label>
    <length>16</length>
    <type>Text</type>
</CustomField>