force-app/main/default/objects/MyOrder__c/fields/Delivery_Locality__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Locality__c</fullName>
    <label>Delivery Locality</label>
    <length>16</length>
    <type>Text</type>
</CustomField>