force-app/main/default/objects/MyOrder__c/fields/Delivery_Phone__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Phone__c</fullName>
    <label>Delivery Phone</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>