force-app/main/default/objects/MyOrder__c/fields/Delivery_Postalcode__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Postalcode__c</fullName>
    <label>Delivery Postalcode</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>