force-app/main/default/objects/MyOrder__c/fields/Delivery_State__c.field-meta.xml
<CustomField>
    <fullName>Delivery_State__c</fullName>
    <label>Delivery State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>